[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-server = "0.7.1"
hex = "0.4.3"
log = "0.4.22"
env_logger = "0.10.0"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
secp256k1 = { version = "0.30.0", features = [
    "global-context",
    "rand",
    "hashes",
    "serde",
] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
thiserror = "2.0.8"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
